# exoplanet-hunter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
conf/: config.yaml
conf/data/: default.yaml  small.yaml
conf/model/: cnn_dualview.yaml
conf/preprocess/: default.yaml
conf/train/: default.yaml  tune.yaml
docs/: methodology.md  research_report_draft.md
notebooks/: 01_data_exploration.ipynb  02_preprocessing.ipynb  03_baseline_rf.ipynb  04_cnn_dualview.ipynb  05_candidate_search.ipynb
scripts/: build_dataset.py  preprocess_only.py  resume_build.sh  score_target.py  train_model.py
src/exoplanet_hunter/: __init__.py
src/exoplanet_hunter/data/: catalog.py  download.py  stellar.py
src/exoplanet_hunter/eval/: __init__.py  vetting.py
src/exoplanet_hunter/features/: centroid.py  handcrafted.py
src/exoplanet_hunter/models/: cnn_dualview.py  losses.py  uncertainty.py
src/exoplanet_hunter/preprocess/: __init__.py  clean.py  fold.py  views.py
src/exoplanet_hunter/search/: bls.py  tls.py
src/exoplanet_hunter/training/: __init__.py  data_module.py  mlflow_utils.py  train.py  tune.py
src/exoplanet_hunter/utils/: paths.py  seeds.py
src/exoplanet_hunter/viz/: __init__.py  dashboard.py
tests/: conftest.py  test_data_module.py  test_features.py  test_models.py  test_preprocess.py
